fixed: fatal flaw that caused an AssertionError with set_* methods

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,9 @@
+v0.2.4 (January 01, 2012)
+-------------------------
+- fixed: fatal flaw that caused any "set" function to throw an AssertionError
+
 v0.2.3 (December 31, 2011)
---------------------------------
+--------------------------
 - added: min_version argument in rtorrent.rpc.Method, this will ensure
          the method will only be available when connected to an rTorrent
          client that can actually support it.
