--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,12 @@
+v0.2.7 (March 1, 2012)
+----------------------
+- fixed: RTorrent instances are no longer created if the connection to the XMLRPC server fails
+
+- API CHANGES
+  - rtorrent.Torrent
+    - added: Torrent.check_hash()
+
+
 v0.2.6 (February 11, 2012)
 --------------------------
 - fixed: Torrent.get_ratio() wasn't converting to float properly
